objects/CC_Response_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Options_Id__c</fullName>
        <description>NGCC Phase1:Stores the Answers SFDCID and cloned from Call Script Q and A.</description>
        <label>Answer Options Id</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Options_Text__c</fullName>
        <description>NGCC Phase1:Stores the Answer Text and cloned from Call Script Q and A.</description>
        <label>Answer Options Text</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Master_Question_Answer_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Reference to the master question and answer bank associated to call script Q and A</description>
        <label>CC Master Question/Answer Bank</label>
        <referenceTo>CC_Master_Question_Answer_Bank__c</referenceTo>
        <relationshipLabel>CC Response Detail (CC Master Question/Answer Bank)</relationshipLabel>
        <relationshipName>CC_Response_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Call Script Reference for the associated Call Script Q and A</description>
        <label>CC Call Script</label>
        <referenceTo>CC_Call_Script__c</referenceTo>
        <relationshipLabel>CC Response Detail</relationshipLabel>
        <relationshipName>CC_Response_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Status when the call script is completed and responses were captured</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditionally_Required_Criteria__c</fullName>
        <description>NGCC Phase1:Provide Valid Critieria for Conditional Validation: 1) NULL: Dependent Question Answer is NULL 2) NOT NULL: Dependent Question Answer is Populated 3) Others: Dependent Question Answer is Specific to the Text.</description>
        <label>Conditionally Required Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NULL</fullName>
                </value>
                <value>
                    <fullName>NOT NULL</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditionaly_Required_If__c</fullName>
        <description>NGCC Phase1:Provide exact value expected from Dependent question on which this question is required. Multiple Options cacn be provided using Comma</description>
        <label>Conditionally Required Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Detail_Local__c</fullName>
        <description>NGCC Phase1:Customer Response in Local Language if the call script was launched in a particular language</description>
        <label>Customer Response Detail (Local)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Detail__c</fullName>
        <description>NGCC Phase1:Customer Response in English stored in master question and answer bank</description>
        <label>Customer Response Detail (English)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Response__c</fullName>
        <description>NGCC Phase1:Customer Response in SFDC ID associated to master question and answer bank for Picklist,Multiselect and Radio type of question. Else free form value captured during call script</description>
        <label>Customer Response</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Provide the Dependent Question on which the Question is required</description>
        <label>CC Call Script Q/A</label>
        <referenceTo>CC_Call_Script_Q_A__c</referenceTo>
        <relationshipLabel>CC Response Detail</relationshipLabel>
        <relationshipName>CC_Response_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>NGCC Phase1:Provide Help Text to help agent to get reference on dependent questions</description>
        <label>Help Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language_Used__c</fullName>
        <description>NGCC Phase1:Language used to create the response</description>
        <label>Language Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_to_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Define if the Question need to be integrated with MODS</description>
        <label>Local to SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_If_Number_Validation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>NGCC Phase1:Provide Maximum Number which can not be exceeded</description>
        <label>Maximum(If Number Validation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_If_Number_Validation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>NGCC Phase1:Provide Minimum Number which can not be exceeded</description>
        <label>Minimum(If Number Validation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1: To hold Preferred Partner Account Through Call Script</description>
        <label>Preferred Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Partner is not a registered active partner</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Account_Status__c</field>
                <operation>equals</operation>
                <value>Active (Registered)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Response Detail (Preferred Partner Account)</relationshipLabel>
        <relationshipName>CC_Response_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Categories__c</fullName>
        <description>NGCC Phase1:Tab name associated to the questions</description>
        <formula>Call_Script__r.Question_Categories__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <description>NGCC Phase1:Provide the Tab name for the Call Script</description>
        <label>Question Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:Contact Information</fullName>
                </value>
                <value>
                    <fullName>2:Account Information</fullName>
                </value>
                <value>
                    <fullName>3:Lead Information</fullName>
                </value>
                <value>
                    <fullName>4:Additional Information</fullName>
                </value>
                <value>
                    <fullName>5:Campaign Information</fullName>
                </value>
                <value>
                    <fullName>6:Partner Information</fullName>
                </value>
                <value>
                    <fullName>7:Call Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Required__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Conditionally required question for which the question will be required</description>
        <label>Conditionally Required on Question</label>
        <referenceTo>CC_Master_Question_Answer_Bank__c</referenceTo>
        <relationshipLabel>CC Response Detail (Depended Question)</relationshipLabel>
        <relationshipName>CC_Response_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>NGCC Phase1:English Question Text for the Call Script</description>
        <label>Question Text</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>NGCC Phase1:Question Type how the Question will be presented in Call Script</description>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Long Text</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>MultiSelect</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Route To Partner</fullName>
                </value>
                <value>
                    <fullName>Route To AM</fullName>
                </value>
                <value>
                    <fullName>Route To PSR</fullName>
                </value>
                <value>
                    <fullName>Preferred Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Define the Question as Mandatory Required</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_on_Lead_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Define the Questions which need to appended to Lead Description after Call Script Completion</description>
        <label>Required on Lead Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Detail_Date_Time__c</fullName>
        <description>NGCC Phase1:Date and time when the response was created</description>
        <label>Response Detail Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Id__c</fullName>
        <description>NGCC Phase1:Reference the Response for the response detail is associated to</description>
        <label>CC Response</label>
        <referenceTo>CC_Response__c</referenceTo>
        <relationshipLabel>CC Response Detail</relationshipLabel>
        <relationshipName>CC_Response_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Route_To_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:SFDC Id of preferred AM agent has captured during call Script</description>
        <label>Route To AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Response_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_PSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:SFDC Id of preferred PSR  agent has captured during call Script</description>
        <label>Route To PSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Response_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:SFDC Id of preferred Partner agent has captured during call Script</description>
        <label>Route To Partner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Partner is not a SCP registered active partner or is flagged on the Denied Partner List, please select a valid SCP registered partner.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Assignment_Eligible__c</field>
                <operation>greaterOrEqual</operation>
                <value>1</value>
            </filterItems>
            <infoMessage>This search will return only those partners enrolled in the Sales Collaboration Platform program. However, if you would like to reference accounts eligible for lead assignment, refer to the P360 Partners Enrolled link on the left hand side of the screen.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Response Detail</relationshipLabel>
        <relationshipName>CC_Response_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>NGCC Phase1:Define the Sequence of the Question with Call Script Specific Tab</description>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Event_Number__c</fullName>
        <description>NGCC Phase1:Source Event Number assocaite to the response default is SFDC ID</description>
        <label>Source Event Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Name__c</fullName>
        <defaultValue>"NGCC"</defaultValue>
        <description>NGCC Phase1:Source system Name assocaite to the response default is NGCC</description>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Transaction_Date__c</fullName>
        <description>NGCC Phase1:Source system transaction date</description>
        <label>Source Transaction Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Required__c</fullName>
        <description>NGCC Phase1:Flag show if the translation is needed. Used for processing the reponse and it true for picklist,multiselect or radio as they stored as ID</description>
        <formula>IF(OR(ISPICKVAL(Question_Type__c,'Radio'),ISPICKVAL(Question_Type__c,'Picklist')),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Both_Conditional_or_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Define if any of the Validation is needed</description>
        <label>Validation(Both Conditional or Required)</label>
        <type>Checkbox</type>
    </fields>
    <description>NGCC Phase-1: Customer response which captured during the call script will be stored in Response Detail Object.</description>
    <label>CC Response Detail</label>
    <nameField>
        <label>CC Response Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Response Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>